=================================================
openadaptor3 production 3.x Release Notes

See licence.txt for Licence information.
=================================================

Date: ???
Author: openadaptor Core Team

openadaptor 3.x
=======

Connectors
==========

 * (SC93) review CXF Web service read connector (ongoing)

Processors
==========

Examples
========

Miscellaneous
=============

Bug Fixes
=========

3rd Party
=========

 * Upgraded: lib/cxf_2.1.jar to 2.2.3
             lib/XmlSchema_1.4.2.jar to 1.4.5 (CXF related)
             lib/FastInfoset_1.2.2 to 1.2.7 (CXF related)
             lib/jaxb-impl_2.1.6.jar to 2.1.12 (CXF related)
             lib/jaxb-xjc_2.1.6.jar to 2.1.12 (CXF related)
             

=================================================
openadaptor3 production 3.4.4 Release Notes

See licence.txt for Licence information.
=================================================

Date: 15th September 2009
Author: openadaptor Core Team

openadaptor 3.4.4
=======

Connectors
==========

 * (SC43) setParametersForQuery in JDBCReadConnector gets called for every supplied 
   parameter.
   
 * (SC90) enrolling polling readers (LoopingPollingReadConnector and
   CronnablePollingReadConnector in a transaction if the delegate reader 
   is transactional.  
   
 * (SC92) correct validation of the CronnablePollingReadConnector.   

Processors
==========

 * Added synchronised property to ScriptProcessor. It is true by default, meaning
   that existing behaviour is unchanged (i.e. calls to process() method will be 
   forcibly synchronised). Unsetting this property will now mean that the process 
   calls will no longer be explicitly synchronised.
   
 * (SC83) GenericEnrichmentProcessor: new 'enrichmentElementName' property allows to
   further customise the way the input and enrichment data are merged together.  
   
 * (SC80) Default values of FIXED and REPROCESSED columns in ExceptionToOrderedMapConvertor