@@ -27,12 +27,18 @@
 
 package org.openadaptor.auxil.connector.soap;
 
+import java.util.ArrayList;
+import java.util.List;
+
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.apache.cxf.endpoint.Client;
 import org.apache.cxf.endpoint.dynamic.DynamicClientFactory;
+import org.openadaptor.auxil.orderedmap.IOrderedMap;
 import org.openadaptor.core.IEnrichmentReadConnector;
 import org.openadaptor.core.IReadConnector;
+import org.openadaptor.core.Component;
+import org.openadaptor.core.exception.ValidationException;
 
 /**
  * WebServiceReadConnector calls a web service with a specified name and specified
@@ -40,9 +46,9 @@ import org.openadaptor.core.IReadConnector;
  * it has fairly limited capability - for instance using an HTTP proxy server is not supported. 
  * Delegates to CXF to handle low level Web service/SOAP.
  * 
- * Initial version of this class is meant to be fully compatible with {@link WebServiceReadConnector}
- * (a XFire equivalent). Future Web service connectors development will involve CXF connectors only,
- * XFire based connectors are to be gradually phased out.
+ * Initial version of this class was meant to be fully compatible with {@link WebServiceReadConnector}
+ * (a XFire equivalent). Going forwards, Web service connectors development will involve CXF connectors 
+ * only, XFire based connectors are to be gradually phased out.
  * 
  * NOTE: Class requires JVM 1.5.
  * NOTE: Use of the Dynamic compiler requires a full JDK to be available. 
@@ -50,10 +56,15 @@ import org.openadaptor.core.IReadConnector;
  * 
  * @author Kris Lachor
  */
-public class WebServiceCXFReadConnector extends WebServiceReadConnector implements IEnrichmentReadConnector {
+public class WebServiceCXFReadConnector extends Component implements IEnrichmentReadConnector {
 
   private static final Log log = LogFactory.getLog(WebServiceCXFReadConnector.class);
  
+  protected static Object[] NO_PARAMETERS = new Object[0];
+
+  private String wsEndpoint = null;
+  private String serviceName = null;
+  private List parameters;
   private Client client;
   
   /**
@@ -65,7 +76,7 @@ public class WebServiceCXFReadConnector extends WebServiceReadConnector implemen
    * Default constructor.
    */
   public WebServiceCXFReadConnector() {
-    log.info("Created new web service read connector");
+    log.info("Created new CXF web service read connector");
   }
 
   /**
@@ -121,4 +132,131 @@ public class WebServiceCXFReadConnector extends WebServiceReadConnector implemen
     return result;
   }
 
+  /**
+   * Ensures that <code>wsEndpoint</code> and <code>serviceName</code> properties
+   * have been set.
+   */
+  public void validate(List exceptions) {
+    log.debug("Validating wsEndpoing: " + wsEndpoint);
+    if(null==wsEndpoint || wsEndpoint.indexOf("wsdl")==-1){
+      exceptions.add(new ValidationException("Unknown web service endpoint", this));
+    }
+    if(null==serviceName){
+      exceptions.add(new ValidationException("Unknown web service endpoint", this));
+    }
+  }
+  
+  /**
+   * Invokes the web service.
+   * 
+   * @see IReadConnector#next(long)
+   * @see #invoke()
+   */
+  public Object[] next(long timeoutMs) {
+    return invoke();
+  }
+  
+  /**
+   * Uses values from <code>inputParameters</code> to set parameters
+   * for the web service. Invokes the web service.
+   * 
+   * @see IEnrichmentReadConnector#next(IOrderedMap, long)
+   * @see #invoke()
+   */
+  public Object[] next(IOrderedMap inputParameters, long timeout) {
+    log.debug("WS reader received dynamic parameters: " + inputParameters);
+    if(parameters==null){
+      parameters = new ArrayList();
+    }
+    else{
+      parameters.clear();
+    }
+    parameters.addAll(inputParameters.values());
+    return invoke();
+  }
+  
+  /**
+   * Reader has no specific context at the moment. Always returns null.
+   * 
+   * @see IReadConnector#getReaderContext()
+   * @return null
+   */
+  public Object getReaderContext() {
+    return null;
+  }
+  
+  /**
+   * Always returns false.
+   * 
+   * @see IReadConnector#isDry()
+   */
+  public boolean isDry() {
+    return false;
+  }
+  
+  /**
+   * Does nothing.
+   * 
+   * @see IReadConnector#setReaderContext(Object)
+   */
+  public void setReaderContext(Object context) {
+  }
+  
+  /**
+   * Set name of web service
+   * 
+   * @param name Service name
+   */
+  public void setServiceName(final String name) {
+    serviceName = name;
+  }
+
+  /**
+   * Getter for Web Service endpoint.
+   * 
+   * @return the Web Service endpoint.
+   */
+  public String getWsEndpoint() {
+    return wsEndpoint;
+  }
+
+  /**
+   * Sets web service endpoint.
+   * 
+   * @param wsEndpoint - web service end point.
+   */
+  public void setWsEndpoint(String wsEndpoint) {
+    this.wsEndpoint = wsEndpoint;
+  }
+
+  /**
+   * Getter for service name.
+   * 
+   * @return the service name.
+   */
+  public String getServiceName() {
+    return serviceName;
+  }
+
+  /**
+   * Returns the {@link List} of parameters.
+   * 
+   * @return the parameters
+   */
+  public List getParameters() {
+    return parameters;
+  }
+
+  /**
+   * Set the parameters that will be passed to the web service.
+   * <p>
+   * The types of the parameters must match the types of the 
+   * parameters to the target method, in the correct order. 
+   * 
+   * @param parameters the parameters to set
+   */
+  public void setParameters(List parameters) {
+    this.parameters = parameters;
+  }
+  
 }
